# pygame-pokemon

./: .coverage  main.py  player.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  datetime.data.json  datetime.meta.json  decimal.data.json  decimal.meta.json  enum.data.json  enum.meta.json  fractions.data.json  fractions.meta.json  genericpath.data.json  genericpath.meta.json  (+46 more)
components/: battle_options_box.py  battle_stats_box.py
constants/: status.py
loaders/: data_loader.py
models/: battle.py  move.py  non_volatile_status.py  pokemon.py  type.py
src/components/: battle_options_box.py  battle_stats_box.py
src/loaders/: data_loader.py
src/models/: battle.py  move.py  pokemon.py  status.py  type.py
src/pokePygame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: moves.json  pokemons.json  types.json
tests/: .coverage  conftest.py  test_pokemon.py
(+300 files in other folders)
