[metadata]
name = pokePygame
description = Clone of pokemon game made in pokePygame
author = Willames Júnior
lincense = MIT
lincense_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    components
    loaders
    models
install_requires = 
    attrs>=22
    pygame>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    flake8>=5.0
    pytest>=6.0
    pytest-cov>=4.0
    tox>=3.26
    mypy>=0.991

[options.package_data]
components = py.typed
loaders = py.typed
models = py.typed

[flake8]
max-line-length = 160
exclude =
    .git